# TGGraphicLab

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  BuildThirdParty.ps1  CMakeLists.txt  GenerateProjectFiles.ps1  LICENSE  README.md
BuildTools/TGHeaderTool/: CMakeLists.txt
BuildTools/TGHeaderTool/Private/: main.cpp
GraphicCore/: CMakeLists.txt
GraphicCore/Include/Base/: Core.h  Delegate.hpp  EventHandler.hpp  Module.h  TypeList.hpp  Utility.h  Window.h
GraphicCore/Include/Diagnostic/: Log.h
GraphicCore/Include/Editor/: MainWindow.h  Window.h
GraphicCore/Include/Exception/: BaseException.h  EGLException.h  OpenGLException.h
GraphicCore/Include/Geometry/: Mesh.h  Plane.h  Sphere.h
GraphicCore/Include/Input/: KeyCode.h  Keyboard.h  Manager.hpp  Mouse.h
GraphicCore/Include/Math/: Assignment.hpp  Block.hpp  CWiseBinaryOp.hpp  CWiseNullaryOp.hpp  Color.hpp  Constants.hpp  Core.hpp  Declarations.hpp  Determinant.hpp  Inverse.hpp  Matrix.hpp  MatrixBase.hpp  Product.hpp  Quaternion.hpp  Reduction.hpp  ReductionOp.hpp  Redux.hpp  Transpose.hpp
GraphicCore/Include/Modules/: DiagnosticsModule.h  EditorModule.h  InputModule.h  Module.h  PlatformModule.h  RenderModule.h
GraphicCore/Include/PAL/: Window.h
GraphicCore/Include/Platform/: Core.h
GraphicCore/Private/Base/: Chronometer.cpp  Component.cpp  DelegateHandle.cpp  MainWindow.cpp  Object.cpp  OverrideNewDelete.cpp  Scene.cpp  Utility.cpp  Window.cpp
GraphicCore/Private/Color/: Color.cpp
GraphicCore/Private/Diagnostic/: Log.cpp
GraphicCore/Private/Editor/: EditorContext.cpp  OpenGLImGuiContext.cpp  VulkanImGuiContext.cpp
GraphicCore/Private/Exception/: BaseException.cpp  EGLException.cpp  OpenGLESException.cpp  OpenGLException.cpp
GraphicCore/Private/Geometry/: Capsule.cpp  Cylinder.cpp  Mesh.cpp  Primitives.cpp  Sphere.cpp
GraphicCore/Private/Input/: Devices.cpp  Keyboard.cpp  Mouse.cpp
GraphicCore/Private/Modules/: EditorModule.cpp  InputModule.cpp  PlatformModule.cpp  RenderModule.cpp
GraphicCore/Private/Physics/: ColliderComponent.cpp  SphereCollider.cpp
GraphicCore/Private/RayTracing/: PathTracer.cpp  Ray.cpp
GraphicCore/Private/Reflection/: Type.cpp
GraphicCore/Private/Rendering/: Camera.cpp  Example.h  OpenGLESRenderer.cpp  VulkanRenderer.cpp
GraphicCore/Public/Algorithm/: Sort.hpp
GraphicCore/Public/Base/: Chronometer.h  CommonDef.h  CommonInterfaces.h  Component.h  Delegate.hpp  EventHandler.hpp  MainWindow.h  Object.h  PlatformTraits.h  Policy.h  Scene.h  Singleton.hpp  Timer.h  TypeList.hpp  Utility.h  Window.h  WindowBase.hpp  WindowDeclarations.h
GraphicCore/Public/Color/: Color.h  StandardColors.h
GraphicCore/Public/Containers/: TreeNode.hpp
GraphicCore/Public/Editor/: EditorContext.h  ImGuiContext.h  OpenGLImGuiContext.h  VulkanImGuiContext.h
GraphicCore/Public/Exception/: BaseException.h  EGLException.h  OpenGLESException.h  OpenGLException.h
GraphicCore/Public/Geometry/: Capsule.h  Cylinder.h  Mesh.h  Plane.h  Primitives.h  Sphere.h
GraphicCore/Public/Input/: Devices.h  Event.h  KeyCode.h
GraphicCore/Public/Math/: AngleAxis.hpp  Assignment.hpp  Block.hpp  CWiseBinaryOp.hpp  CWiseNullaryOp.hpp  Common.hpp  Constants.hpp  Core.hpp  Declarations.hpp  Determinant.hpp  EulerAngle.hpp  Inverse.hpp  Matrix.hpp  MatrixBase.hpp  OrthoMethod.hpp  Precision.hpp  Product.hpp  Quaternion.hpp  Random.hpp  Reduction.hpp  RotationBase.hpp  Transform.hpp  Transpose.hpp
GraphicCore/Public/Modules/: EditorModule.h  InputModule.h  Module.h  PlatformModule.h  RenderModule.h
GraphicCore/Public/Physics/: ColliderComponent.h  HitInfo.h  SphereCollider.h
GraphicCore/Public/RayTracing/: PathTracer.h  Ray.h
GraphicCore/Public/Reflection/: Attribute.hpp  Enumeration.h  Registration.hpp  Specifier.hpp  StaticReflection.hpp  Type.h  Variant.h
GraphicCore/Public/Rendering/: Camera.h  CameraComponent.h  Context.h  GraphicsAPIDefines.h  GraphicsAPITraits.h  Material.h  OpenGLESRenderer.h  ProjectionMatrix.hpp  RenderPass.h  RenderPipeline.h  Renderer.h  Shader.h  Texture.h  ViewProjectionMatrix.hpp  VulkanRenderer.h
GraphicCore/Source/: Chronometer.cpp
GraphicCore/Source/Base/: Chronometer.cpp  MainWindow.cpp  Utility.cpp  Window.cpp
GraphicCore/Source/Color/: Color.cpp
GraphicCore/Source/Diagnostic/: Log.cpp
GraphicCore/Source/Editor/: MainWindow.cpp  Window.cpp
GraphicCore/Source/Exception/: BaseException.cpp  EGLException.cpp  OpenGLException.cpp
GraphicCore/Source/Geometry/: Plane.cpp  Primitives.cpp  Sphere.cpp
GraphicCore/Source/Input/: Keyboard.cpp  Mouse.cpp
GraphicCore/Source/Modules/: EditorModule.cpp  InputModule.cpp  PlatformModule.cpp  RenderModule.cpp
TGRenderer/: CMakeLists.txt
TGRenderer/Include/: Renderer.h
TGRenderer/Private/: Application.cpp  Example.h  ExampleManager.cpp  ExampleManager.h  Renderer.cpp  main.cpp
TGRenderer/Private/OpenGLExample/: BasicLightExample.cpp  BasicLightExample.h  CubeExample.cpp  CubeExample.h  OpenGLExampleFactory.cpp  OpenGLExampleFactory.h  PBRExample.cpp  PBRExample.h  QuadExample.cpp  QuadExample.h  TriangleExample.cpp  TriangleExample.h
TGRenderer/Public/: Application.h
TGRenderer/Source/: Renderer.cpp  main.cpp
TGRenderer/include/: PlatformModule.h  Renderer.h  Renderer.hpp
TGRenderer/src/: PlatformModule.cpp  Renderer.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/Delegate/: CMakeLists.txt  main.cpp
Tests/DotNetHostRuntime/: CMakeLists.txt  DotNetHostRuntime.sln  main.cpp
Tests/InlineSpecifier/: CMakeLists.txt  file.h  file1.cpp  main.cpp
Tests/InputOutput/: CMakeLists.txt  main.cpp
Tests/Math/: CMakeLists.txt  UnitTest.h  main.cpp
Tests/Memory/: CMakeLists.txt  main.cpp
Tests/QtDemo/: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  README.txt  main.cpp
Tests/Reflection/: CMakeLists.txt  ClangASTTest.cpp  CommandLineTest.hpp  GlobalArgs.h  StaticReflection.cpp  main.cpp  test.cpp
Tests/Template/: CMakeLists.txt  ReflectionTest.hpp  main.cpp  temp.cpp
Tests/WinSocketDemo/: CMakeLists.txt  TCPClient.cpp  TCPServer.cpp  UDPClient.cpp  UDPServer.cpp  client.cpp  server.cpp
(+286 files in other folders)
